src/snapshots/rlox__parser__tests__parser@function__fun.lox.snap
---
source: src/parser.rs
expression: parser.parse()
input_file: test_programs/parsing/function/fun.lox
---
Ok(
    [
        FunctionStatement {
            name: "add",
            parameters: [
                Parameter {
                    name: "a",
                    line: 1,
                },
                Parameter {
                    name: "b",
                    line: 1,
                },
                Parameter {
                    name: "c",
                    line: 1,
                },
            ],
            statements: [
                PrintStatement {
                    expression: BinaryExpression {
                        left: BinaryExpression {
                            left: VariableExpression {
                                name: "a",
                                maybe_distance: None,
                                line: 2,
                            },
                            right: VariableExpression {
                                name: "b",
                                maybe_distance: None,
                                line: 2,
                            },
                            operator: Add,
                            line: 2,
                        },
                        right: VariableExpression {
                            name: "c",
                            maybe_distance: None,
                            line: 2,
                        },
                        operator: Add,
                        line: 2,
                    },
                    line: 2,
                },
            ],
            line: 1,
        },
    ],
)
